--- a/index.html
+++ b/index.html
@@ -3,68 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Laundry Mart</title>
+    <title>Hero Section</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <h1>Welcome to Laundry Wallah / Laundry Mart!</h1>
-    </header>
-    <main>
-      <section id="aboutSection">
-        Laundry Wallah / Laundry Mart, a premier laundry service, is enhancing
-        its online presence through a HTML webpage. The initial HTML code serves
-        as a foundation for a user-friendly and visually appealing site. Web
-        Page is about creating a seamless digital experience, showcasing
-        services, pricing, and easy navigation.
-      </section>
-      <br />
-      <img
-        src="https://thumbs.dreamstime.com/b/washing-machine-splashing-vibrant-water-colors-modern-design-lg-brand-dynamic-motion-colorful-background-home-appliance-laundry-354172859.jpg"
-        alt="laundry Image"
-        id="imageSection"
-      />
-      <section id="servicesSection">
-        <h1>Our Services</h1>
-        <ul>
-          <li>Washing and Drying</li>
-          <li>Ironing and Folding</li>
-          <li>Dry Cleaning</li>
-          <li>Stain Removal</li>
-          <li>Express Services</li>
-          <li>Special Garment Care</li>
-        </ul>
-      </section>
-      <section id="priceListSection">
-        <table border="">
-          <h1>Price List</h1>
-          <tr>
-            <th>Service</th>
-            <th>Price</th>
-          </tr>
-          <tr>
-            <td>Washing and Drying</td>
-            <td>$20</td>
-          </tr>
-          <tr>
-            <td>Ironing and Folding</td>
-            <td>$12</td>
-          </tr>
-        </table>
-      </section>
-      <section id="bookNowSection">
-        <h1>Book Now</h1>
-        <label for="username">Name:</label>
-        <input type="text" id="username" required>
-        <label for="email">Email:</label>
-        <input type="email" id="email" required>
-        <label for="phone">Phone:</label>
-        <input type="tel" id="phone" required>
-        <button type="submit">Book Now</button>
-      </section>
-      <br>
-      <footer>
-        <span><strong>Contact us at:</strong></span><span>info@laundrymart.com</span>
-      </footer>
-    </main>
+    <nav class="nav">
+      <div class="logo">Logo</div>
+      <div class="box">
+        <div class="home">Home</div>
+        <div class="services">Services</div>
+        <div class="aboutUs">About Us</div>
+        <div class="contactUs">Contact Us</div>
+      </div>
+      <div class="userName">Username</div>
+    </nav>
+    <section>
+      <div class="left">
+        <h1>
+          Revitalize you <br />Cloth with Expert <br /><span
+>Laundry Services</span
+          >
+        </h1>
+
+        <p>
+          From premium dry cleaning to swift wash and fold, we deliver care and
+          convenience. Schedule a pickup and rediscover the freshness of your
+          clothes today!
+        </p>
+        <button>Book a service today!</button>
+      </div>
+      <div class="right">
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUWkjT3GnMPA3RxQmbV7LQ4GvhtKMW2XJl6w&s"
+          alt="Laundry Service"
+        />
+      </div>
+    </section>
   </body>
 </html>
